--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "@types/node": "10.12.18",
     "@types/react": "16.7.18",
     "@types/react-dom": "16.0.11",
+    "prettier-tslint": "^0.4.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-scripts": "2.1.3",
+    "rmwc": "^4.0.6",
     "typescript": "3.2.2"
   },
   "scripts": {
@@ -26,5 +28,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "@types/webpack-env": "^1.13.6"
+  }
 }
