--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "devDependencies": {
     "@material-ui/core": "^4.8.2",
     "@material-ui/icons": "^4.5.1",
+    "@types/auth0": "^2.20.4",
     "@types/jest": "^25.1.1",
     "@types/react-dom": "^16.9.4",
     "@types/react-router-dom": "^5.1.3",
