--- a/package.json
+++ b/package.json
@@ -19,19 +19,23 @@
   ],
   "dependencies": {
     "@auth0/auth0-spa-js": "^1.6.5",
+    "@material-ui/core": "^4.8.2",
+    "@material-ui/icons": "^4.5.1",
     "dotenv": "^8.2.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router": "^5.1.2",
-    "react-router-dom": "^5.1.2"
+    "react-router-dom": "^5.1.2",
+    "react-transition-group": "^4.4.1"
   },
   "devDependencies": {
-    "@material-ui/core": "^4.8.2",
-    "@material-ui/icons": "^4.5.1",
     "@types/auth0": "^2.20.4",
     "@types/jest": "^25.1.1",
+    "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.4",
-    "@types/react-router-dom": "^5.1.3",
+    "@types/react-router": "^5.1.7",
+    "@types/react-router-dom": "^5.1.5",
+    "@types/react-transition-group": "^4.4.0",
     "@types/webpack-env": "^1.15.0",
     "react-scripts": "^3.3.0",
     "typescript": "^3.7.4"
