--- a/package.json
+++ b/package.json
@@ -18,26 +18,25 @@
     "not op_mini all"
   ],
   "dependencies": {
-    "@auth0/auth0-spa-js": "^1.6.5",
-    "@material-ui/core": "^4.8.2",
-    "@material-ui/icons": "^4.5.1",
-    "dotenv": "^8.2.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-router": "^5.1.2",
-    "react-router-dom": "^5.1.2",
+    "@auth0/auth0-react": "^1.5.0",
+    "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
+    "@types/auth0": "^2.33.3",
+    "auth0": "^2.34.2",
+    "dotenv": "^8.6.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-transition-group": "^4.4.1"
   },
   "devDependencies": {
-    "@types/auth0": "^2.20.4",
-    "@types/jest": "^25.1.1",
-    "@types/react": "^16.9.35",
-    "@types/react-dom": "^16.9.4",
-    "@types/react-router": "^5.1.7",
-    "@types/react-router-dom": "^5.1.5",
-    "@types/react-transition-group": "^4.4.0",
-    "@types/webpack-env": "^1.15.0",
-    "react-scripts": "^3.3.0",
-    "typescript": "^3.7.4"
+    "@types/react": "^17.0.2",
+    "@types/react-dom": "^17.0.4",
+    "@types/react-router-dom": "^5.1.7",
+    "@types/react-transition-group": "^4.4.1",
+    "@types/webpack-env": "^1.16.0",
+    "react-scripts": "^3.4.4",
+    "typescript": "^4.2.4"
   }
 }
